--- a/blog/docker-compose.yaml
+++ b/blog/docker-compose.yaml
@@ -6,14 +6,11 @@ services:
     command: python manage.py runserver 0.0.0.0:8000
     volumes:
       - .:/app
-      - static_volume:/app/staticfiles  # Share the static files directory
+      - static_volume:/app/staticfiles
     ports:
       - "8000:8000"
-    environment:
-      - DB_NAME=postgres
-      - DB_USER=postgres
-      - DB_PASSWORD=postgres
-      - DB_HOST=db
+    env_file:
+      - .env.prod
     depends_on:
       - db
 
@@ -21,18 +18,16 @@ services:
     image: postgres:13-alpine
     volumes:
       - postgres_data:/var/lib/postgresql/data/
-    environment:
-      - POSTGRES_DB=postgres
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
+    env_file:
+      - .env.prod
 
   nginx:
     image: nginx:latest
     ports:
       - "80:80"
     volumes:
-      - static_volume:/app/staticfiles  # Mount the static files volume
-      - ./nginx.conf:/etc/nginx/nginx.conf:ro  # Custom Nginx config
+      - static_volume:/app/staticfiles
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
     depends_on:
       - web
 
