--- a/blog/.env.prod
+++ b/blog/.env.prod
@@ -1,7 +1,16 @@
-DB_NAME=postgres
-DB_USER=postgres
-DB_PASSWORD=postgres
+SECRET_KEY=django-insecure-4cd$-p3go1ysxyy_m%!vch%bbg8dl#r)^9zoxtc6&w3gvtli)c
+DEBUG=False
+ALLOWED_HOSTS=localhost,127.0.0.1,web
+POSTGRES_DB=practice
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
 DB_HOST=db
 DB_PORT=5432
-DEBUG=False
-SECRET_KEY=your-strong-secret-key
+
+AWS_ACCESS_KEY_ID=minioadmin
+AWS_SECRET_ACCESS_KEY=minioadmin
+AWS_STORAGE_BUCKET_NAME=media
+AWS_S3_ENDPOINT_URL=http://localhost:9000
+AWS_S3_REGION_NAME=us-east-1
+AWS_S3_USE_SSL=False
+AWS_S3_VERIFY=False
