--- a/blog/Dockerfile
+++ b/blog/Dockerfile
@@ -1,23 +1,11 @@
-FROM python:3.9-slim
+FROM python:3.11-slim
 
 ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
 
 WORKDIR /app
 
-RUN apt-get update && apt-get install -y --no-install-recommends \
-    gcc \
-    python3-dev \
-    libpq-dev \
-    postgresql-client && \
-    rm -rf /var/lib/apt/lists/*
+COPY requirements.txt /app/
+RUN pip install --upgrade pip && pip install -r requirements.txt
 
-COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
-
-COPY . .
-
-RUN chmod +x /app/entrypoint.sh
-
-# Entrypoint
-ENTRYPOINT ["/app/entrypoint.sh"]
+COPY . /app/
