--- a/blog/.env.prod
+++ b/blog/.env.prod
@@ -1,16 +1,19 @@
 SECRET_KEY=django-insecure-4cd$-p3go1ysxyy_m%!vch%bbg8dl#r)^9zoxtc6&w3gvtli)c
-DEBUG=False
-ALLOWED_HOSTS=localhost,127.0.0.1,web
-POSTGRES_DB=practice
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=postgres
-DB_HOST=db
-DB_PORT=5432
+DEBUG=True
 
-AWS_ACCESS_KEY_ID=minioadmin
-AWS_SECRET_ACCESS_KEY=minioadmin
-AWS_STORAGE_BUCKET_NAME=media
-AWS_S3_ENDPOINT_URL=http://localhost:9000
-AWS_S3_REGION_NAME=us-east-1
-AWS_S3_USE_SSL=False
-AWS_S3_VERIFY=False
+ALLOWED_HOSTS=web,localhost,127.0.0.1
+
+# Database Configuration
+DATABASE_NAME=practice
+DATABASE_USER=postgres
+DATABASE_PASSWORD=postgres
+DATABASE_HOST=db
+DATABASE_PORT=5432
+
+# MinIO Storage Configuration
+MINIO_STORAGE_ENDPOINT=minio:9000
+MINIO_STORAGE_ACCESS_KEY=minioadmin
+MINIO_STORAGE_SECRET_KEY=minioadmin
+MINIO_STORAGE_MEDIA_BUCKET_NAME=media
+MINIO_STORAGE_MEDIA_URL=http://127.0.0.1:9000/media
+
