--- a/blog/docker-compose.yaml
+++ b/blog/docker-compose.yaml
@@ -3,13 +3,17 @@ version: '3.9'
 services:
   web:
     build: .
-    command: bash -c "python manage.py migrate && python manage.py runserver 0.0.0.0:8000"
+    command: bash -c "python manage.py migrate &&
+      python manage.py collectstatic --noinput &&
+      python manage.py runserver 0.0.0.0:8000"
     expose:
       - "8000"
     ports:
       - "8000:8000"
     volumes:
+      - static_volume:/app/staticfiles
       - .:/app
+
     depends_on:
       db:
         condition: service_healthy
@@ -20,17 +24,20 @@ services:
     networks:
       - practice-network
 
-#  nginx:
-#    image: nginx:latest
-#    ports:
-#      - "80:80"
-#    volumes:
-#      - ./nginx.conf:/etc/nginx/nginx.conf:ro
-#      - ./staticfiles:/app/staticfiles:ro
-#    depends_on:
-#      - web
-#    networks:
-#      - practice-network
+  nginx:
+    image: nginx:stable-alpine3.20-perl
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+      - static_volume:/app/staticfiles:ro  # Use same named volume
+    environment:
+      - NGINX_USER=www-data  # Add this line
+
+    depends_on:
+      - web
+    networks:
+      - practice-network
 
   db:
     image: postgres:15.12-alpine3.20
@@ -70,6 +77,7 @@ services:
 volumes:
   postgres_data:
   minio_data:
+  static_volume:
 
 networks:
   practice-network:
