--- a/blog/nginx.conf
+++ b/blog/nginx.conf
@@ -1,24 +1,34 @@
-worker_processes 1;
-
-events { worker_connections 1024; }
+events {
+    worker_connections 1024;
+}
 
 http {
+    include /etc/nginx/mime.types;
+    default_type application/octet-stream;
+
+    log_format main '$remote_addr - $remote_user [$time_local] "$request" '
+                    '$status $body_bytes_sent "$http_referer" '
+                    '"$http_user_agent" "$http_x_forwarded_for"';
+
+    access_log /var/log/nginx/access.log main;
+    error_log /var/log/nginx/error.log warn;
+
     server {
         listen 80;
-        server_name localhost;
+        server_name localhost 127.0.0.1;
 
-        # Serve static files
         location /static/ {
             alias /app/staticfiles/;
+            autoindex on;
+            access_log /var/log/nginx/static-access.log main;
+            error_log /var/log/nginx/static-error.log warn;
         }
 
-        # Proxy all other requests to the Django web container
         location / {
-            proxy_pass http://web:8000;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
+        proxy_pass http://web:8000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
     }
 }
