--- a/blog/.env.prod
+++ b/blog/.env.prod
@@ -1,5 +1,5 @@
 SECRET_KEY=django-insecure-4cd$-p3go1ysxyy_m%!vch%bbg8dl#r)^9zoxtc6&w3gvtli)c
-DEBUG=True
+DEBUG=False
 
 ALLOWED_HOSTS=web,localhost,127.0.0.1
 
@@ -10,10 +10,8 @@ DATABASE_PASSWORD=postgres
 DATABASE_HOST=db
 DATABASE_PORT=5432
 
-# MinIO Storage Configuration
-MINIO_STORAGE_ENDPOINT=minio:9000
-MINIO_STORAGE_ACCESS_KEY=minioadmin
-MINIO_STORAGE_SECRET_KEY=minioadmin
-MINIO_STORAGE_MEDIA_BUCKET_NAME=media
-MINIO_STORAGE_MEDIA_URL=http://127.0.0.1:9000/media
+
+MINIO_STORAGE_ENDPOINT=http://minio:9000
+MINIO_S3_CUSTOM_DOMAIN=localhost:9000
+MINIO_BUCKET_NAME=media
 
